Fix Footer alignment issue on mobile

--- a/styles/regions/footer.scss
+++ b/styles/regions/footer.scss
@@ -6,6 +6,10 @@
     background: rgb(230, 230, 230);
 }
 
+.footer section {
+    min-width: 150px;
+}
+
 .footer .brand {
     margin: 2rem auto;
     text-align: center;
